Optimize multi-threaded processing